--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,12 @@ dependencies {
     //lottie
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+
+    //Auto image slider
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+
 }
